--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>cucumber-scala-extensions_2.10</artifactId>
     <packaging>jar</packaging>
     <description>cucumber-scala-extensions</description>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>cucumber-scala-extensions</name>
     <organization>
         <name>cucumber-scala-extensions</name>
