--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,16 @@
             <version>1.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>util-eval_2.10</artifactId>
+            <version>6.3.8</version>
+        </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>maven-twitter</id>
+            <url>http://maven.twttr.com/</url>
+        </repository>
+    </repositories>
 </project>
